# dks

./: .gitmodules  CMakeLists.txt  LICENSE  makefile  readme.md
lib/: CMakeLists.txt
src/: CMakeLists.txt  benchmark.cpp  benchmark.h  main.cpp  model.cpp  model.h  msa.cpp  msa.h  partition.cpp  partition.h  test_case.cpp  test_case.h  tree.cpp  tree.h
test/: CMakeLists.txt
test/data/: 101.phy  775.phy  colu.fas
test/src/: CMakeLists.txt  benchmark.cpp  data.h  model.cpp  msa.cpp  partition.cpp  test_case.cpp  tree.cpp
